--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,7 +5,7 @@ on:
       [main]
 jobs:
   build-docker-image:
-    runs-on: linux/amd64,linux/arm64
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the latest branches
         uses: action/checkout@v2
