--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the latest branches
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Setup docker Buildx
         uses: docker/setup-buildx-action@v1
