--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,3 +12,19 @@ jobs:
 
       - name: Setup docker Buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Login to dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
+      - name: Docker Build and Push
+        uses: docker/build-push-action@v2
+        id: docker_build
+        with:
+          push: true
+          tags: ${{secrets.DOCKER_HUB_USERNAME}}/python-helloworld:latest
+
+      - name: Image digest
+        run: echo ${{steps.docker_build.outputs}}
